continue rework swagger api documentation, review auth,account Controllers
